(feat) Check unique tagging/untagging